--- a/css/style.css
+++ b/css/style.css
@@ -573,4 +573,16 @@ section {
     border-bottom: 1px dashed #f2b6cc;
 }
 
+footer {
+      background-color: #FFB2A5;
+      border-top: 3px solid #dab777;
+      text-align: center;
+      padding: 40px;
+      margin-top: 30px;
+      font-size: 1.5rem;
+    }
+
+    footer p {
+      margin: 5px 0;
+    }
 
