--- a/css/style.css
+++ b/css/style.css
@@ -602,3 +602,9 @@ footer {
     text-decoration: none;
     color: #d6336c;
 }
+
+.para {
+    text-align: center;
+    justify-content: center;
+    color: var(--primary_color);
+}
