--- a/css/style.css
+++ b/css/style.css
@@ -668,3 +668,33 @@ footer {
 .wide-text-container p {
     margin-bottom: 12px;
 }
+
+/* wide or long text box */
+
+.section-containers {
+    background-color: #F9EAF3;  /* main website color */
+    padding: 40px 0;            /* optional spacing around the box */
+}
+
+/* second wide or long text box */
+.wide-text-containers {
+    max-width: 1400px;
+    margin: 0 auto;             /* center in section */
+    padding: 20px 50px;
+    background-color: #ffffff;  /* keep the box white */
+    border-radius: 12px;
+    box-shadow: 0 6px 18px rgba(0, 0, 0, 0.15);
+
+    font-family: var(--righteous);
+    font-size: 1rem;
+    line-height: 1.5;
+    text-align: justify;
+
+    word-wrap: break-word;
+    overflow-wrap: break-word;
+    white-space: normal;
+}
+
+.wide-text-containers p {
+    margin-bottom: 12px;
+}
