Welcome to Barbie's World, Ma'am!

--- a/css/style.css
+++ b/css/style.css
@@ -702,7 +702,7 @@ footer {
 /* wide or long text box */
 
 .section-containerZ {
-    background-color: #F9EAF3;  /* main website color */
+    background-color: #ffffff;  /* main website color */
     padding: 40px 0;            /* optional spacing around the box */
 }
 
