--- a/css/login.css
+++ b/css/login.css
@@ -173,3 +173,28 @@ header img {
     font-family: 'Righteous', cursive;
     cursor: pointer;
 }
+
+
+/* footer */
+.paa{
+    text-align: center;
+    padding: 0px;
+    background-color: #f2b6cc;
+    position: fixed;
+    bottom: 0;
+    width: 100%;
+    font-size: 14px;
+    color: #d6336c;
+}
+
+.paa li{
+    text-align: center;
+    text-decoration: none;
+    color: #d6336c;
+}
+
+.para {
+    text-align: center;
+    justify-content: center;
+    color: var(--primary_color);
+}
